Initial Push All

--- a/LOGIC & REASONING/mentor.htm
+++ b/LOGIC & REASONING/mentor.htm
@@ -905,12 +905,11 @@ necessary.  Here is a sample; alter the names:
 </div>
 
 <div id=txtHELP class=cssHELP>
-<br/>BROWSER SETTINGS - CHROME (chrome://flags)
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;dom.workers.enabled:true
-<br/>&nbsp;&nbsp;&nbsp;&nbsp;dom.workers.maxPerDomain:100
+<br/>BROWSER SETTINGS - CHROME &amp; OPERA (chrome://flags)
+<br/>&nbsp;&nbsp;&nbsp;&nbsp;--allow-file-access-from-files
 <br/>
 <br/>
-<br/>BROWSER SETTINGS - MOZILLA (about:config)
+<br/>BROWSER SETTINGS - MOZILLA &amp; SAFARI (about:config)
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;dom.workers.enabled:true
 <br/>&nbsp;&nbsp;&nbsp;&nbsp;dom.workers.maxPerDomain:100
 <br/>
