--- a/SYMBOLIC PROVER/Prover.htm
+++ b/SYMBOLIC PROVER/Prover.htm
@@ -3,16 +3,16 @@
 <head>
 <meta charset="utf-8">
 <title> Euclid Automated Prover - v1.0.0.0 </title>
-<link rel='stylesheet' media='all' href='symbols.css'>
+<link rel='stylesheet' media='all' href="ENGINE/HTM/CSS/symbols.css">
 <link rel="stylesheet" media="all" href="ENGINE/HTM/CSS/index.css">
-<!-- engine scripts -->
+<!-------- engine scripts -------->
 <script src="ENGINE/HTM/JS/Object.js"></script>
 <script src="ENGINE/HTM/JS/Behaviors.js"></script>
 <script src="ENGINE/HTM/JS/Axioms.js" defer></script>
 <script src="ENGINE/HTM/JS/index.js" defer></script>
-<!---------------------------->
-<script src=MD5.js></script>
-<script src=symbols.js></script>
+<!-------------------------------->
+<script src="ENGINE/HTM/JS/MD5.js"></script>
+<script src="ENGINE/HTM/JS/symbols.js"></script>
 <div id=cssMENU>
 <a href=# class=cssCANCEL>&times;</a>
 <div class=cssFRAME>
