--- a/SYMBOLIC PROVER/Prover.htm
+++ b/SYMBOLIC PROVER/Prover.htm
@@ -1514,8 +1514,7 @@ necessary.  Here is a sample; alter the names:
 <br/>    &lt;?&gt; dpsi
 <br/>    &lt;?&gt; domega
 <br/>
-<br/>- SUPPORT
-<br/>    <img alt="Yahoo!: github_genesis_project" src=donate_paypal_sm.png />
+<br/>- TECH SUPPORT / DONATE
 <br/><sup>Yahoo!-Mail: github_genesis_project</sup>
 <br/>-------------------------------------------------------*/
 </div>
@@ -1596,7 +1595,7 @@ class Math.Symbol.Number.Complex : Math.Symbol.Number.Irrational  {<br>
 <tbody class="cssFormulaFont">
 <!-- create small tables for better performance -->
 <tr class="cssUBOUNDS"><td> 5 </td><td></td><td></td></tr>
-<tr class="cssFormula"><td><div class="cssFormulaOperator"> &int; </div> </td><td> x <sup class="cssSUP"> c </sup> dx = c x <sup class="cssSUP"> ( c - 1 ) </sup>, given c &gt; 0 </td><td class="cssLINE"> ( 0001 ) </td></tr>
+<tr class="cssFormula"><td><div class="cssFormulaOperator"> &int; </div> </td><td> x <sup class="cssSUP"> c </sup> dx = c ⋅ x <sup class="cssSUP"> ( c - 1 ) </sup>, given c &gt; 0 </td><td class="cssLINE"> ( 0001 ) </td></tr>
 <tr class="cssLBOUNDS"><td> 0 </td><td></td><td></td></tr>
 </tbody>
 </table>
